kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prediction-app
  labels:
    name: prediction-app
    environment: production
